--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     <!-- THEME STYLES -->
     <link href="/assets/website/css/bifrostv/layout.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="/assets/website/css/G.css" />
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2SJQFG3DTP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -120,6 +119,62 @@
                 <div class="col-md-9">
                     <h2>最近更新文章</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-24">
+                            <div class="col-md-3">
+                                <a href="/news/article-171053.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/3a33e53034a271dd79404d802a2a40d4.webp" class="full-width img-responsive" alt="苹果手机Clash全面排障指南：从配置到稳定的科学上网之路">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-171053.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">苹果手机Clash全面排障指南：从配置到稳定的科学上网之路</h3>
+                                </a>
+                                <p>在信息高度互联的今天，苹果手机早已不仅是一款通讯工具，更是我们探索世界、获取资源的重要窗口。而Clash，作为iOS平台上一款广受欢迎的网络代理工具，帮助许多用户突破地理限制、提升网络安全性，成为数字</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-23">
+                            <div class="col-md-3">
+                                <a href="/news/article-170657.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/16cec7f031a62b5b6e0d52c037271aa5.webp" class="full-width img-responsive" alt="突破网络封锁：科学上网神器下载与使用全攻略">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-170657.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">突破网络封锁：科学上网神器下载与使用全攻略</h3>
+                                </a>
+                                <p>在信息全球化的今天，互联网已成为人们获取知识、交流思想的重要渠道。然而，由于各种原因，许多优质的网络资源和服务在某些地区无法直接访问。科学上网工具应运而生，它们如同数字时代的"任意门"，帮助用户突破地</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-22">
+                            <div class="col-md-3">
+                                <a href="/news/article-170271.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/2111b7fd3fa84b4b7bda2ae53f4fe98d.webp" class="full-width img-responsive" alt="挖瓦工科学上网全解析：轻松突破网络限制的终极指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-170271.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">挖瓦工科学上网全解析：轻松突破网络限制的终极指南</h3>
+                                </a>
+                                <p>在今天这个信息化、全球化日益加速的时代，互联网已成为我们日常工作、学习和娱乐的重要组成部分。然而，互联网的自由访问并非在所有地方都能轻松实现。随着国家和地区对信息流通的管控不断加严，很多被墙的外部网站</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-21">
+                            <div class="col-md-3">
+                                <a href="/news/article-169884.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/1ebbc9d09263fcd395b36155a96c2fb5.webp" class="full-width img-responsive" alt="深度剖析vmess私人节点：从原理到实践的全方位指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-169884.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">深度剖析vmess私人节点：从原理到实践的全方位指南</h3>
+                                </a>
+                                <p>引言：为什么需要vmess私人节点？  在当今互联网环境中，网络审查与隐私保护成为全球网民关注的焦点。vmess作为一种先进的代理协议，凭借其卓越的加密性能和灵活的传输方式，成为科学上网领域的重要工具</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-20">
                             <div class="col-md-3">
                                 <a href="/news/article-169515.htm" class="xcblog-blog-url">
@@ -143,7 +198,11 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-170271.htm" title="挖瓦工科学上网全解析：轻松突破网络限制的终极指南">挖瓦工科学上网全解析：轻松突破网络限制的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-170657.htm" title="突破网络封锁：科学上网神器下载与使用全攻略">突破网络封锁：科学上网神器下载与使用全攻略</a></li>
                         <li class="py-2"><a href="/news/article-169515.htm" title="探秘Shadowrocket：网络代理协议的原理、配置与实战指南">探秘Shadowrocket：网络代理协议的原理、配置与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-171053.htm" title="苹果手机Clash全面排障指南：从配置到稳定的科学上网之路">苹果手机Clash全面排障指南：从配置到稳定的科学上网之路</a></li>
                     </ul>
     </div>
 </div>
@@ -155,7 +214,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                     </ul>
     </div>
