--- a/about-us.htm
+++ b/about-us.htm
@@ -134,11 +134,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-170657.htm" title="突破网络封锁：科学上网神器下载与使用全攻略">突破网络封锁：科学上网神器下载与使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-172215.htm" title="群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理">群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理</a></li>
                         <li class="py-2"><a href="/news/article-169515.htm" title="探秘Shadowrocket：网络代理协议的原理、配置与实战指南">探秘Shadowrocket：网络代理协议的原理、配置与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-171801.htm" title="词海探秘：全方位解析“clash”的语义迷宫与使用艺术">词海探秘：全方位解析“clash”的语义迷宫与使用艺术</a></li>
+                        <li class="py-2"><a href="/news/article-173342.htm" title="科学上网的艺术：i站使用全攻略与深度解析">科学上网的艺术：i站使用全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-172976.htm" title="SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？">SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？</a></li>
                         <li class="py-2"><a href="/news/article-170271.htm" title="挖瓦工科学上网全解析：轻松突破网络限制的终极指南">挖瓦工科学上网全解析：轻松突破网络限制的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
                         <li class="py-2"><a href="/news/article-171053.htm" title="苹果手机Clash全面排障指南：从配置到稳定的科学上网之路">苹果手机Clash全面排障指南：从配置到稳定的科学上网之路</a></li>
+                        <li class="py-2"><a href="/news/article-173727.htm" title="探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南">探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-170657.htm" title="突破网络封锁：科学上网神器下载与使用全攻略">突破网络封锁：科学上网神器下载与使用全攻略</a></li>
                     </ul>
     </div>
 </div>
@@ -150,7 +155,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                     </ul>
     </div>
