--- a/date/2025-10/index.htm
+++ b/date/2025-10/index.htm
@@ -120,6 +120,62 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-31">
+                            <div class="col-md-3">
+                                <a href="/news/article-172582.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/1ebbc9d09263fcd395b36155a96c2fb5.webp" class="full-width img-responsive" alt="深度剖析Clash系列游戏：从硬件配置到极致优化的完整指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-172582.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">深度剖析Clash系列游戏：从硬件配置到极致优化的完整指南</h3>
+                                </a>
+                                <p>在移动游戏产业爆发式增长的当下，Supercell旗下的Clash系列凭借其独特的策略玩法与社交属性，已成为全球现象级作品。无论是《部落冲突》（Clash of Clans）的基地建设与攻防战，《皇室</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-27">
+                            <div class="col-md-3">
+                                <a href="/news/article-172215.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/ab57907195174eb558f457027a0f6d28.webp" class="full-width img-responsive" alt="群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-172215.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理</h3>
+                                </a>
+                                <p>引言：数字时代的隐私守护者  在这个每秒钟产生数百万次网络攻击的时代，我们的数字足迹比想象中更加脆弱。当普通VPN已无法满足精细化流量管理需求时，一款名为Clash的开源代理工具正在技术爱好者中掀起革</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-26">
+                            <div class="col-md-3">
+                                <a href="/news/article-171801.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/1c49132ad822fe3cfbbd76eabc254af4.webp" class="full-width img-responsive" alt="词海探秘：全方位解析“clash”的语义迷宫与使用艺术">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-171801.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">词海探秘：全方位解析“clash”的语义迷宫与使用艺术</h3>
+                                </a>
+                                <p>在英语词汇的浩瀚海洋中，有些词语如同多棱镜般折射出丰富的光谱，"clash"便是这样一个充满张力与表现力的词汇。它既可以是金属碰撞的铿锵之声，也可以是思想交锋的无声火花，更能够描绘文化碰撞的宏大叙事。</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-25">
+                            <div class="col-md-3">
+                                <a href="/news/article-171436.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/1ebbc9d09263fcd395b36155a96c2fb5.webp" class="full-width img-responsive" alt="深度剖析loco科学上网：从原理到实践的完整指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-171436.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">深度剖析loco科学上网：从原理到实践的完整指南</h3>
+                                </a>
+                                <p>在当今数字化时代，网络自由与隐私保护已成为全球网民关注的焦点。loco科学上网作为一种突破网络限制、保障数据安全的有效工具，正被越来越多追求开放互联网体验的用户所青睐。本文将全面解析loco科学上网的</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-24">
                             <div class="col-md-3">
                                 <a href="/news/article-171053.htm" class="xcblog-blog-url">
@@ -200,9 +256,14 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-172582.htm" title="深度剖析Clash系列游戏：从硬件配置到极致优化的完整指南">深度剖析Clash系列游戏：从硬件配置到极致优化的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-173342.htm" title="科学上网的艺术：i站使用全攻略与深度解析">科学上网的艺术：i站使用全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
                         <li class="py-2"><a href="/news/article-169515.htm" title="探秘Shadowrocket：网络代理协议的原理、配置与实战指南">探秘Shadowrocket：网络代理协议的原理、配置与实战指南</a></li>
                         <li class="py-2"><a href="/news/article-170271.htm" title="挖瓦工科学上网全解析：轻松突破网络限制的终极指南">挖瓦工科学上网全解析：轻松突破网络限制的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-171436.htm" title="深度剖析loco科学上网：从原理到实践的完整指南">深度剖析loco科学上网：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-172976.htm" title="SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？">SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？</a></li>
+                        <li class="py-2"><a href="/news/article-172215.htm" title="群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理">群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理</a></li>
                         <li class="py-2"><a href="/news/article-170657.htm" title="突破网络封锁：科学上网神器下载与使用全攻略">突破网络封锁：科学上网神器下载与使用全攻略</a></li>
                         <li class="py-2"><a href="/news/article-171053.htm" title="苹果手机Clash全面排障指南：从配置到稳定的科学上网之路">苹果手机Clash全面排障指南：从配置到稳定的科学上网之路</a></li>
                     </ul>
@@ -216,7 +277,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                     </ul>
     </div>
