hai yong you 1 5K huang jin fen bian lv wu shuang ping cai yong xin yi dai 8T LTPO ji shu zhi chi 5Hz

--- a/about-us.htm
+++ b/about-us.htm
@@ -134,16 +134,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-173342.htm" title="科学上网的艺术：i站使用全攻略与深度解析">科学上网的艺术：i站使用全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-177662.htm" title="苹果用户必备：V2Ray完整下载与配置终极指南">苹果用户必备：V2Ray完整下载与配置终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-177270.htm" title="解锁网络边界：国区Shadowrocket的深度解析与实战指南">解锁网络边界：国区Shadowrocket的深度解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-179606.htm" title="Quantumult全面指南：功能解析与高阶配置实战">Quantumult全面指南：功能解析与高阶配置实战</a></li>
+                        <li class="py-2"><a href="/news/article-175697.htm" title="Clash拍子新手全攻略：从安装到精通的实用指南">Clash拍子新手全攻略：从安装到精通的实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-176485.htm" title="突破数字铁幕：全球网络审查环境下的科学上网终极指南">突破数字铁幕：全球网络审查环境下的科学上网终极指南</a></li>
                         <li class="py-2"><a href="/news/article-172215.htm" title="群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理">群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理</a></li>
                         <li class="py-2"><a href="/news/article-171436.htm" title="深度剖析loco科学上网：从原理到实践的完整指南">深度剖析loco科学上网：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-170657.htm" title="突破网络封锁：科学上网神器下载与使用全攻略">突破网络封锁：科学上网神器下载与使用全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-180417.htm" title="深度掌握Shadowrocket路由配置：从入门到精通的完整指南">深度掌握Shadowrocket路由配置：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-181210.htm" title="深入解析Quantumult X的分流配置文件：全面指南与实用技巧">深入解析Quantumult X的分流配置文件：全面指南与实用技巧</a></li>
                         <li class="py-2"><a href="/news/article-173727.htm" title="探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南">探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-175301.htm" title="深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南">深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-171053.htm" title="苹果手机Clash全面排障指南：从配置到稳定的科学上网之路">苹果手机Clash全面排障指南：从配置到稳定的科学上网之路</a></li>
-                        <li class="py-2"><a href="/news/article-172976.htm" title="SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？">SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？</a></li>
+                        <li class="py-2"><a href="/news/article-176092.htm" title="俄罗斯网络自由之路：全面解析科学上网的突围之道">俄罗斯网络自由之路：全面解析科学上网的突围之道</a></li>
+                        <li class="py-2"><a href="/news/article-174125.htm" title="解锁网络自由：Quantumult X与V2Ray的完美结合指南">解锁网络自由：Quantumult X与V2Ray的完美结合指南</a></li>
                     </ul>
     </div>
 </div>
@@ -155,7 +155,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
