--- a/date/2025-11/page-2.htm
+++ b/date/2025-11/page-2.htm
@@ -4,18 +4,18 @@
 <head>
         <link rel="canonical" href="https://v2raydoc.github.io" />
     <meta charset="utf-8" />
-    <title>2025-11归档 - 顶级Clash节点 梯子中文网</title>
+    <title>2025-11归档 - 第3页 - 顶级Clash节点 梯子中文网</title>
         <meta name="keywords" content="2025-11归档顶级Clash节点 梯子中文网" />
-        <meta name="description" content="2025-11归档，当前是第1页" />
+        <meta name="description" content="2025-11归档，当前是第3页" />
         <link rel="icon" href="/assets/website/img/bifrostv/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="顶级Clash节点 梯子中文网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://v2raydoc.github.io" />
     <meta property="og:site_name" content="顶级Clash节点 梯子中文网" />
-    <meta property="og:title" content="2025-11归档 - 顶级Clash节点 梯子中文网" />
+    <meta property="og:title" content="2025-11归档 - 第3页 - 顶级Clash节点 梯子中文网" />
     <meta property="og:image" content="/assets/website/img/bifrostv/favicon.ico" />
-        <meta property="og:description" content="2025-11归档，当前是第1页" />
+        <meta property="og:description" content="2025-11归档，当前是第3页" />
         
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -27,7 +27,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="2025-11归档 - 顶级Clash节点 梯子中文网">
+    <meta name="apple-mobile-web-app-title" content="2025-11归档 - 第3页 - 顶级Clash节点 梯子中文网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -120,6 +120,104 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-12">
+                            <div class="col-md-3">
+                                <a href="/news/article-177270.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/3f67644482dd40e002100b750ae5ab77.webp" class="full-width img-responsive" alt="解锁网络边界：国区Shadowrocket的深度解析与实战指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-177270.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">解锁网络边界：国区Shadowrocket的深度解析与实战指南</h3>
+                                </a>
+                                <p>引言：当围墙遇见钥匙  在数字铁幕若隐若现的今天，全球仍有超过25亿人生活在网络审查环境中。中国作为世界上互联网用户最多的国家，其独特的网络生态催生了对代理工具的旺盛需求。Shadowrocket犹如</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-11">
+                            <div class="col-md-3">
+                                <a href="/news/article-176877.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/3f67644482dd40e002100b750ae5ab77.webp" class="full-width img-responsive" alt="全面使用指南：科学上网 APK 2018 5，让信息自由触手可及">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-176877.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">全面使用指南：科学上网 APK 2018 5，让信息自由触手可及</h3>
+                                </a>
+                                <p>在信息全球化的浪潮中，互联网早已不再是一个封闭的系统。人们希望能够自由地获取资讯、交流思想、使用全球范围内的服务。然而，由于种种原因，在某些地区，一些网站和应用被封锁，正常访问变得困难。这种局面催生出</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-10">
+                            <div class="col-md-3">
+                                <a href="/news/article-176485.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/1958757015a012655a1ea4bdeed06577.webp" class="full-width img-responsive" alt="突破数字铁幕：全球网络审查环境下的科学上网终极指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-176485.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">突破数字铁幕：全球网络审查环境下的科学上网终极指南</h3>
+                                </a>
+                                <p>引言：当互联网不再"互联"  在柏林墙倒塌三十余年后的今天，一种新型的数字铁幕正在全球范围内悄然升起。据国际非营利组织"自由之家"最新报告，全球已有超过25个国家建立了系统性互联网审查机制，每月新增被</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-09">
+                            <div class="col-md-3">
+                                <a href="/news/article-176092.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/3a33e53034a271dd79404d802a2a40d4.webp" class="full-width img-responsive" alt="俄罗斯网络自由之路：全面解析科学上网的突围之道">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-176092.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">俄罗斯网络自由之路：全面解析科学上网的突围之道</h3>
+                                </a>
+                                <p>引言：数字铁幕下的生存智慧  在克里姆林宫日益收紧的互联网管控政策下，俄罗斯网民正面临着一个数字时代的悖论——全球信息触手可及，却又被无形的防火墙阻隔。从Telegram的封杀到维基百科的限流，俄罗斯</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-08">
+                            <div class="col-md-3">
+                                <a href="/news/article-175697.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/1c49132ad822fe3cfbbd76eabc254af4.webp" class="full-width img-responsive" alt="Clash拍子新手全攻略：从安装到精通的实用指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-175697.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">Clash拍子新手全攻略：从安装到精通的实用指南</h3>
+                                </a>
+                                <p>随着互联网环境的复杂化和网络限制的增加，科学上网工具成为越来越多用户的刚需。Clash拍子作为一款功能强大且灵活的网络代理工具，因其多协议支持和丰富的规则管理，迅速赢得了广大用户的青睐。然而，面对初次</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-07">
+                            <div class="col-md-3">
+                                <a href="/news/article-175301.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/a42ca36d17b9649015cf987e45751c36.webp" class="full-width img-responsive" alt="深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-175301.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南</h3>
+                                </a>
+                                <p>在全球网络环境愈发复杂的背景下，科学上网工具已成为数百万用户获取信息自由、保护网络隐私的首选。而在众多工具中，v2rayNG 凭借其开源、灵活、高度可配置的特性，成为 Android 平台上最受欢迎的</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-06">
+                            <div class="col-md-3">
+                                <a href="/news/article-174913.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/1ebbc9d09263fcd395b36155a96c2fb5.webp" class="full-width img-responsive" alt="华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-174913.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南</h3>
+                                </a>
+                                <p>开篇：当路由器遇上科学上网  在这个信息爆炸却壁垒森严的数字时代，一台普通的路由器可以成为打开世界大门的钥匙。华硕RT-AC66U作为中高端家用路由器的经典之作，其隐藏的科学上网潜力足以让用户突破地理</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
                                                 <div class="row item xcblog-blog-item" data-date="2025-11-05">
                             <div class="col-md-3">
                                 <a href="/news/article-174520.htm" class="xcblog-blog-url">
@@ -162,36 +260,8 @@
                             </div>
                         </div>
                         <!--// end row -->
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-02">
-                            <div class="col-md-3">
-                                <a href="/news/article-173342.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240907-1/bd70cf01dc1f62a76b16741ec3232e9f.webp" class="full-width img-responsive" alt="科学上网的艺术：i站使用全攻略与深度解析">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-173342.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">科学上网的艺术：i站使用全攻略与深度解析</h3>
-                                </a>
-                                <p>引言：数字时代的自由之门  在信息洪流席卷全球的今天，网络已成为现代人延伸的感官。然而，地理边界与政策限制筑起无形的数字高墙，让"科学上网"从技术话题升华为当代网民的必备技能。作为广受青睐的工具，i站</p>
-                            </div>
-                        </div>
-                        <!--// end row -->
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-01">
-                            <div class="col-md-3">
-                                <a href="/news/article-172976.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240907-1/12a002863affdf0885aff872f26490d1.webp" class="full-width img-responsive" alt="SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-172976.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？</h3>
-                                </a>
-                                <p>在如今信息日益全球化的网络环境中，翻墙已经成为部分用户获取海外资讯、自由访问全球互联网的重要手段。而在众多代理工具中，SSR（ShadowsocksR）与 V2Ray 是两款极为常见且影响力广泛的解决</p>
-                            </div>
-                        </div>
-                        <!--// end row -->
                         
-                        <ul class="pagination"><li><a href="/date/2025-11/">&laquo;</a></li> <li><a href="/date/2025-11/">1</a></li><li class="active"><span>2</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/date/2025-11/">&laquo;</a></li> <li><a href="/date/2025-11/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2025-11/page-3.htm">3</a></li> <li><a href="/date/2025-11/page-3.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -200,16 +270,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-175301.htm" title="深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南">深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-172976.htm" title="SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？">SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？</a></li>
-                        <li class="py-2"><a href="/news/article-171436.htm" title="深度剖析loco科学上网：从原理到实践的完整指南">深度剖析loco科学上网：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-174913.htm" title="华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南">华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-174125.htm" title="解锁网络自由：Quantumult X与V2Ray的完美结合指南">解锁网络自由：Quantumult X与V2Ray的完美结合指南</a></li>
-                        <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-169515.htm" title="探秘Shadowrocket：网络代理协议的原理、配置与实战指南">探秘Shadowrocket：网络代理协议的原理、配置与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-177662.htm" title="苹果用户必备：V2Ray完整下载与配置终极指南">苹果用户必备：V2Ray完整下载与配置终极指南</a></li>
                         <li class="py-2"><a href="/news/article-170657.htm" title="突破网络封锁：科学上网神器下载与使用全攻略">突破网络封锁：科学上网神器下载与使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-178446.htm" title="安卓用户必备：从零开始的V2Ray科学上网完全指南">安卓用户必备：从零开始的V2Ray科学上网完全指南</a></li>
+                        <li class="py-2"><a href="/news/article-175301.htm" title="深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南">深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-169515.htm" title="探秘Shadowrocket：网络代理协议的原理、配置与实战指南">探秘Shadowrocket：网络代理协议的原理、配置与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-174913.htm" title="华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南">华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-173727.htm" title="探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南">探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-179233.htm" title="突破网络限制：全面指南教你如何安全购买V2Ray节点并获取订阅">突破网络限制：全面指南教你如何安全购买V2Ray节点并获取订阅</a></li>
+                        <li class="py-2"><a href="/news/article-177662.htm" title="苹果用户必备：V2Ray完整下载与配置终极指南">苹果用户必备：V2Ray完整下载与配置终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-171436.htm" title="深度剖析loco科学上网：从原理到实践的完整指南">深度剖析loco科学上网：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-180017.htm" title="突破网络枷锁：v2rayng最新版全面指南与深度体验">突破网络枷锁：v2rayng最新版全面指南与深度体验</a></li>
                     </ul>
     </div>
 </div>
@@ -221,7 +291,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
