--- a/date/2025-11/page-3.htm
+++ b/date/2025-11/page-3.htm
@@ -4,18 +4,18 @@
 <head>
         <link rel="canonical" href="https://v2raydoc.github.io" />
     <meta charset="utf-8" />
-    <title>免责申明 - 顶级Clash节点 梯子中文网</title>
-        <meta name="keywords" content="免责申明 - 顶级Clash节点 梯子中文网" />
-        <meta name="description" content="免责申明 - 顶级Clash节点 梯子中文网" />
+    <title>2025-11归档 - 第2页 - 顶级Clash节点 梯子中文网</title>
+        <meta name="keywords" content="2025-11归档顶级Clash节点 梯子中文网" />
+        <meta name="description" content="2025-11归档，当前是第2页" />
         <link rel="icon" href="/assets/website/img/bifrostv/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="顶级Clash节点 梯子中文网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://v2raydoc.github.io" />
     <meta property="og:site_name" content="顶级Clash节点 梯子中文网" />
-    <meta property="og:title" content="免责申明 - 顶级Clash节点 梯子中文网" />
+    <meta property="og:title" content="2025-11归档 - 第2页 - 顶级Clash节点 梯子中文网" />
     <meta property="og:image" content="/assets/website/img/bifrostv/favicon.ico" />
-        <meta property="og:description" content="免责申明 - 顶级Clash节点 梯子中文网" />
+        <meta property="og:description" content="2025-11归档，当前是第2页" />
         
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -27,7 +27,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免责申明 - 顶级Clash节点 梯子中文网">
+    <meta name="apple-mobile-web-app-title" content="2025-11归档 - 第2页 - 顶级Clash节点 梯子中文网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -59,7 +59,7 @@
 </head>
 
 
-<body id="body" data-spy="scroll" data-target=".header" data-page="newly_discovered_nodes">
+<body id="body" data-spy="scroll" data-target=".header" data-page="category">
         <!--========== HEADER ==========-->
     <header class="header navbar-fixed-top">
         <!-- Navbar -->
@@ -100,11 +100,11 @@
     <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="/assets/website/img/bifrostv/1920x1080/01.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-6">
                     <div class="promo-block-divider">
-                        <h1 class="promo-block-title">免责申明</h1>
+                        <h1 class="promo-block-title">2025-11 归档</h1>
                         <p class="promo-block-text">
-                            <a href="/">首页</a> / 免责申明
+                            <a href="/">首页</a> / 2025-11 归档
                         </p>
                     </div>
                 </div>
@@ -119,27 +119,37 @@
         <div class="container content-lg">
             <div class="row">
                 <div class="col-md-9">
-                    <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们致力于为用户提供便捷、高效的网络访问体验。然而，在使用本平台服务的过程中，用户需要了解并遵守以下免责条款：</p>
-<p>一、服务内容</p>
-<p>本平台提供的所有节点订阅服务均来源于公开信息或合作伙伴，我们不对节点信息的真实性、准确性、合法性以及可用性做任何明示或暗示的保证。用户在使用节点时，请自行判断并承担相关风险。</p>
-<p>二、网络安全</p>
-<p>本平台仅提供节点订阅服务，不参与用户的网络访问行为。用户在使用节点时，应自行负责网络访问的安全性和合法性，不得利用本平台提供的服务从事任何违法、违规或侵犯他人权益的行为。</p>
-<p>三、隐私保护</p>
-<p>我们尊重并保护用户的个人隐私，但用户在使用本平台服务时，可能需要提供部分个人信息以完成相关操作。我们承诺将严格按照相关法律法规的要求，对用户提供的个人信息进行保密处理，并采取相应的安全措施防止信息泄露。但请注意，由于网络环境的复杂性和不确定性，我们无法保证用户个人信息在传输过程中绝对安全，用户应自行承担因信息泄露而可能产生的风险。</p>
-<p>四、版权及知识产权</p>
-<p>本平台上的所有内容（包括但不限于文字、图片、视频等）均受版权及知识产权法律保护。用户在使用本平台服务时，应遵守相关法律法规，不得擅自复制、传播或用于其他商业用途。对于侵犯本平台版权及知识产权的行为，我们将依法追究法律责任。</p>
-<p>五、免责条款</p>
-<ol>
-    <li>因网络故障、服务器维护等原因导致服务中断或无法正常使用时，本平台不承担任何责任。</li>
-    <li>用户在使用本平台服务时，因个人操作不当或第三方因素导致的损失，本平台不承担任何赔偿责任。</li>
-    <li>本平台提供的节点订阅服务仅供参考，用户在使用过程中应自行判断并承担相关风险。对于因使用本平台服务而产生的任何直接或间接损失，本平台不承担任何责任。</li>
-</ol>
-<p>六、其他</p>
-<ol>
-    <li>本免责声明自发布之日起生效，并可能根据法律法规的变化或本平台服务的调整而进行修改。用户在使用本平台服务时，应定期查看并了解最新的免责声明内容。</li>
-    <li>对于本免责声明中未明确的事项，将按照相关法律法规的规定进行处理。如用户在使用本平台服务过程中遇到任何问题或争议，可通过本平台提供的联系方式与我们联系，我们将尽力为用户解决问题。</li>
-</ol>
-<p>总之，本平台将竭诚为用户提供优质的节点订阅服务，但用户在使用服务时应自行承担相关风险并遵守相关法律法规。我们希望与用户共同营造一个安全、和谐、合法的网络环境。</p>  
+                    <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-02">
+                            <div class="col-md-3">
+                                <a href="/news/article-173342.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/bd70cf01dc1f62a76b16741ec3232e9f.webp" class="full-width img-responsive" alt="科学上网的艺术：i站使用全攻略与深度解析">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-173342.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">科学上网的艺术：i站使用全攻略与深度解析</h3>
+                                </a>
+                                <p>引言：数字时代的自由之门  在信息洪流席卷全球的今天，网络已成为现代人延伸的感官。然而，地理边界与政策限制筑起无形的数字高墙，让"科学上网"从技术话题升华为当代网民的必备技能。作为广受青睐的工具，i站</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-01">
+                            <div class="col-md-3">
+                                <a href="/news/article-172976.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/12a002863affdf0885aff872f26490d1.webp" class="full-width img-responsive" alt="SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-172976.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？</h3>
+                                </a>
+                                <p>在如今信息日益全球化的网络环境中，翻墙已经成为部分用户获取海外资讯、自由访问全球互联网的重要手段。而在众多代理工具中，SSR（ShadowsocksR）与 V2Ray 是两款极为常见且影响力广泛的解决</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                        
+                        <ul class="pagination"><li><a href="/date/2025-11/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-11/">1</a></li><li><a href="/date/2025-11/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -148,16 +158,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-176092.htm" title="俄罗斯网络自由之路：全面解析科学上网的突围之道">俄罗斯网络自由之路：全面解析科学上网的突围之道</a></li>
-                        <li class="py-2"><a href="/news/article-173342.htm" title="科学上网的艺术：i站使用全攻略与深度解析">科学上网的艺术：i站使用全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-172215.htm" title="群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理">群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理</a></li>
-                        <li class="py-2"><a href="/news/article-171801.htm" title="词海探秘：全方位解析“clash”的语义迷宫与使用艺术">词海探秘：全方位解析“clash”的语义迷宫与使用艺术</a></li>
-                        <li class="py-2"><a href="/news/article-180816.htm" title="龙马科学上网完全指南：从入门到精通的详细教程与实战技巧">龙马科学上网完全指南：从入门到精通的详细教程与实战技巧</a></li>
                         <li class="py-2"><a href="/news/article-171436.htm" title="深度剖析loco科学上网：从原理到实践的完整指南">深度剖析loco科学上网：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-179233.htm" title="突破网络限制：全面指南教你如何安全购买V2Ray节点并获取订阅">突破网络限制：全面指南教你如何安全购买V2Ray节点并获取订阅</a></li>
+                        <li class="py-2"><a href="/news/article-176092.htm" title="俄罗斯网络自由之路：全面解析科学上网的突围之道">俄罗斯网络自由之路：全面解析科学上网的突围之道</a></li>
+                        <li class="py-2"><a href="/news/article-169515.htm" title="探秘Shadowrocket：网络代理协议的原理、配置与实战指南">探秘Shadowrocket：网络代理协议的原理、配置与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-178835.htm" title="华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案">华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案</a></li>
                         <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-170271.htm" title="挖瓦工科学上网全解析：轻松突破网络限制的终极指南">挖瓦工科学上网全解析：轻松突破网络限制的终极指南</a></li>
                         <li class="py-2"><a href="/news/article-178446.htm" title="安卓用户必备：从零开始的V2Ray科学上网完全指南">安卓用户必备：从零开始的V2Ray科学上网完全指南</a></li>
-                        <li class="py-2"><a href="/news/article-176485.htm" title="突破数字铁幕：全球网络审查环境下的科学上网终极指南">突破数字铁幕：全球网络审查环境下的科学上网终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-171053.htm" title="苹果手机Clash全面排障指南：从配置到稳定的科学上网之路">苹果手机Clash全面排障指南：从配置到稳定的科学上网之路</a></li>
+                        <li class="py-2"><a href="/news/article-180017.htm" title="突破网络枷锁：v2rayng最新版全面指南与深度体验">突破网络枷锁：v2rayng最新版全面指南与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-174125.htm" title="解锁网络自由：Quantumult X与V2Ray的完美结合指南">解锁网络自由：Quantumult X与V2Ray的完美结合指南</a></li>
                     </ul>
     </div>
 </div>
