qiu hua zheng cheng zai IFA zhan shang rong yao guan xuan jiang yu si ji du fa bu MagicOS 7 ji yu yi tu

--- a/client.htm
+++ b/client.htm
@@ -84,6 +84,7 @@
                     <div class="menu-container">
                         <ul class="nav navbar-nav navbar-nav-right">
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/">首页</a></li>
+                                                        <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/free-nodes/">免费节点</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/paid-subscribe/">推荐机场</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/news/">新闻资讯</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/client.htm">客户端</a></li>
@@ -285,16 +286,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-171436.htm" title="深度剖析loco科学上网：从原理到实践的完整指南">深度剖析loco科学上网：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-172976.htm" title="SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？">SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？</a></li>
-                        <li class="py-2"><a href="/news/article-171053.htm" title="苹果手机Clash全面排障指南：从配置到稳定的科学上网之路">苹果手机Clash全面排障指南：从配置到稳定的科学上网之路</a></li>
+                        <li class="py-2"><a href="/news/article-176092.htm" title="俄罗斯网络自由之路：全面解析科学上网的突围之道">俄罗斯网络自由之路：全面解析科学上网的突围之道</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-2-free-v2ray.htm" title="V2ray Doc节点 | 12月2日20.1M/S|免费V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点节点推荐，在线Clash机场梯子购买推荐">V2ray Doc节点 | 12月2日20.1M/S|免费V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点节点推荐，在线Clash机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-1-free-node-subscribe.htm" title="V2ray Doc节点 | 12月1日19.1M/S|免费Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点节点推荐，在线Clash机场梯子购买推荐">V2ray Doc节点 | 12月1日19.1M/S|免费Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点节点推荐，在线Clash机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-178046.htm" title="小火箭Shadowrocket全攻略：账号获取、配置与使用技巧详解">小火箭Shadowrocket全攻略：账号获取、配置与使用技巧详解</a></li>
+                        <li class="py-2"><a href="/news/article-182410.htm" title="从零开始：SSPanel与V2Ray完美融合的中转配置全攻略">从零开始：SSPanel与V2Ray完美融合的中转配置全攻略</a></li>
                         <li class="py-2"><a href="/news/article-173727.htm" title="探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南">探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-171801.htm" title="词海探秘：全方位解析“clash”的语义迷宫与使用艺术">词海探秘：全方位解析“clash”的语义迷宫与使用艺术</a></li>
-                        <li class="py-2"><a href="/news/article-178446.htm" title="安卓用户必备：从零开始的V2Ray科学上网完全指南">安卓用户必备：从零开始的V2Ray科学上网完全指南</a></li>
-                        <li class="py-2"><a href="/news/article-172582.htm" title="深度剖析Clash系列游戏：从硬件配置到极致优化的完整指南">深度剖析Clash系列游戏：从硬件配置到极致优化的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-180417.htm" title="深度掌握Shadowrocket路由配置：从入门到精通的完整指南">深度掌握Shadowrocket路由配置：从入门到精通的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-177270.htm" title="解锁网络边界：国区Shadowrocket的深度解析与实战指南">解锁网络边界：国区Shadowrocket的深度解析与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-174520.htm" title="深入解析 Clash200l：从入门到精通的完整指南">深入解析 Clash200l：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-172215.htm" title="群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理">群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理</a></li>
+                        <li class="py-2"><a href="/news/article-174913.htm" title="华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南">华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-182008.htm" title="解锁网络自由：能开V2Ray的路由器全面配置指南">解锁网络自由：能开V2Ray的路由器全面配置指南</a></li>
                     </ul>
     </div>
 </div>
@@ -306,7 +307,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
@@ -329,6 +333,7 @@
                                         <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
                     <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
