--- a/date/2025-10/index.htm
+++ b/date/2025-10/index.htm
@@ -84,6 +84,7 @@
                     <div class="menu-container">
                         <ul class="nav navbar-nav navbar-nav-right">
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/">首页</a></li>
+                                                        <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/free-nodes/">免费节点</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/paid-subscribe/">推荐机场</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/news/">新闻资讯</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/client.htm">客户端</a></li>
@@ -256,16 +257,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-176092.htm" title="俄罗斯网络自由之路：全面解析科学上网的突围之道">俄罗斯网络自由之路：全面解析科学上网的突围之道</a></li>
                         <li class="py-2"><a href="/news/article-174520.htm" title="深入解析 Clash200l：从入门到精通的完整指南">深入解析 Clash200l：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-171801.htm" title="词海探秘：全方位解析“clash”的语义迷宫与使用艺术">词海探秘：全方位解析“clash”的语义迷宫与使用艺术</a></li>
-                        <li class="py-2"><a href="/news/article-180816.htm" title="龙马科学上网完全指南：从入门到精通的详细教程与实战技巧">龙马科学上网完全指南：从入门到精通的详细教程与实战技巧</a></li>
-                        <li class="py-2"><a href="/news/article-172215.htm" title="群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理">群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理</a></li>
+                        <li class="py-2"><a href="/news/article-171053.htm" title="苹果手机Clash全面排障指南：从配置到稳定的科学上网之路">苹果手机Clash全面排障指南：从配置到稳定的科学上网之路</a></li>
+                        <li class="py-2"><a href="/news/article-176092.htm" title="俄罗斯网络自由之路：全面解析科学上网的突围之道">俄罗斯网络自由之路：全面解析科学上网的突围之道</a></li>
                         <li class="py-2"><a href="/news/article-173342.htm" title="科学上网的艺术：i站使用全攻略与深度解析">科学上网的艺术：i站使用全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-182813.htm" title="Quantumult iOS 免费获取与高效使用全攻略：解锁网络自由新境界">Quantumult iOS 免费获取与高效使用全攻略：解锁网络自由新境界</a></li>
+                        <li class="py-2"><a href="/news/article-176485.htm" title="突破数字铁幕：全球网络审查环境下的科学上网终极指南">突破数字铁幕：全球网络审查环境下的科学上网终极指南</a></li>
                         <li class="py-2"><a href="/news/article-179233.htm" title="突破网络限制：全面指南教你如何安全购买V2Ray节点并获取订阅">突破网络限制：全面指南教你如何安全购买V2Ray节点并获取订阅</a></li>
-                        <li class="py-2"><a href="/news/article-174125.htm" title="解锁网络自由：Quantumult X与V2Ray的完美结合指南">解锁网络自由：Quantumult X与V2Ray的完美结合指南</a></li>
-                        <li class="py-2"><a href="/news/article-176877.htm" title="全面使用指南：科学上网 APK 2018 5，让信息自由触手可及">全面使用指南：科学上网 APK 2018 5，让信息自由触手可及</a></li>
-                        <li class="py-2"><a href="/news/article-175697.htm" title="Clash拍子新手全攻略：从安装到精通的实用指南">Clash拍子新手全攻略：从安装到精通的实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-178046.htm" title="小火箭Shadowrocket全攻略：账号获取、配置与使用技巧详解">小火箭Shadowrocket全攻略：账号获取、配置与使用技巧详解</a></li>
+                        <li class="py-2"><a href="/news/article-178835.htm" title="华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案">华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案</a></li>
+                        <li class="py-2"><a href="/news/article-179606.htm" title="Quantumult全面指南：功能解析与高阶配置实战">Quantumult全面指南：功能解析与高阶配置实战</a></li>
                     </ul>
     </div>
 </div>
@@ -277,7 +278,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
@@ -300,6 +304,7 @@
                                         <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
                     <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
