--- a/date/2025-11/index.htm
+++ b/date/2025-11/index.htm
@@ -84,6 +84,7 @@
                     <div class="menu-container">
                         <ul class="nav navbar-nav navbar-nav-right">
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/">首页</a></li>
+                                                        <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/free-nodes/">免费节点</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/paid-subscribe/">推荐机场</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/news/">新闻资讯</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/client.htm">客户端</a></li>
@@ -120,6 +121,76 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-30">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-11-30-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/79c506a24d461a2430a7e8074b4953df.webp" class="full-width img-responsive" alt="V2ray Doc节点 | 11月30日20.2M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点节点推荐，在线Clash机场梯子购买推荐">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-11-30-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">V2ray Doc节点 | 11月30日20.2M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点节点推荐，在线Clash机场梯子购买推荐</h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了欧洲、香港、日本、韩国、美国、加拿大、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-29">
+                            <div class="col-md-3">
+                                <a href="/news/article-182813.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/2111b7fd3fa84b4b7bda2ae53f4fe98d.webp" class="full-width img-responsive" alt="Quantumult iOS 免费获取与高效使用全攻略：解锁网络自由新境界">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-182813.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">Quantumult iOS 免费获取与高效使用全攻略：解锁网络自由新境界</h3>
+                                </a>
+                                <p>在当今数字时代，网络自由已成为许多用户的迫切需求。对于iOS用户而言，Quantumult无疑是一款能够改变网络体验的神器。本文将深入探讨如何免费获取这款工具，并充分发挥其强大功能，带您进入网络无界的</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-28">
+                            <div class="col-md-3">
+                                <a href="/news/article-182410.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/79c506a24d461a2430a7e8074b4953df.webp" class="full-width img-responsive" alt="从零开始：SSPanel与V2Ray完美融合的中转配置全攻略">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-182410.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">从零开始：SSPanel与V2Ray完美融合的中转配置全攻略</h3>
+                                </a>
+                                <p>引言：当管理面板遇上高性能代理  在数字围墙日益高筑的今天，网络代理技术已成为互联网自由访问的重要工具。SSPanel作为一款广受欢迎的开源代理管理面板，与V2Ray这一革命性的代理协议的结合，创造出</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-27">
+                            <div class="col-md-3">
+                                <a href="/news/article-182008.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/8a1b18935dbe2e041725d62a2e843700.webp" class="full-width img-responsive" alt="解锁网络自由：能开V2Ray的路由器全面配置指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-182008.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">解锁网络自由：能开V2Ray的路由器全面配置指南</h3>
+                                </a>
+                                <p>在当今互联网环境中，隐私保护和网络自由变得越来越重要。V2Ray作为一款强大的代理工具，能够有效突破网络限制，而将其部署在路由器上则能实现全屋设备的无缝保护。本文将深入探讨如何选择、配置和优化支持V2</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-26">
+                            <div class="col-md-3">
+                                <a href="/news/article-181609.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/3f67644482dd40e002100b750ae5ab77.webp" class="full-width img-responsive" alt="解锁网络自由：Shadowrocket购买与使用全攻略">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-181609.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">解锁网络自由：Shadowrocket购买与使用全攻略</h3>
+                                </a>
+                                <p>在当今数字时代，网络自由已成为许多人的基本需求。无论是为了访问全球信息资源，还是为了保护个人隐私，一款可靠的网络代理工具都显得尤为重要。而Shadowrocket，作为苹果设备上广受好评的代理工具，凭</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
                                                 <div class="row item xcblog-blog-item" data-date="2025-11-23">
                             <div class="col-md-3">
                                 <a href="/news/article-181210.htm" class="xcblog-blog-url">
@@ -190,76 +261,6 @@
                             </div>
                         </div>
                         <!--// end row -->
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-18">
-                            <div class="col-md-3">
-                                <a href="/news/article-179233.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240907-1/30f0871a3b50907c5ddaa478dc267119.webp" class="full-width img-responsive" alt="突破网络限制：全面指南教你如何安全购买V2Ray节点并获取订阅">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-179233.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">突破网络限制：全面指南教你如何安全购买V2Ray节点并获取订阅</h3>
-                                </a>
-                                <p>在当今数字时代，互联网已成为我们生活中不可或缺的一部分，然而网络审查和地理限制却让许多用户感到困扰。V2Ray作为一种先进的代理工具，因其出色的稳定性和快速的连接速度，成为了突破这些限制的首选解决方案</p>
-                            </div>
-                        </div>
-                        <!--// end row -->
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-17">
-                            <div class="col-md-3">
-                                <a href="/news/article-178835.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240907-1/1c49132ad822fe3cfbbd76eabc254af4.webp" class="full-width img-responsive" alt="华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-178835.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案</h3>
-                                </a>
-                                <p>引言：数字时代的隐私守护者  在这个信息爆炸的时代，网络隐私与安全已成为每个网民不可忽视的重要议题。随着网络审查和监控日益严格，越来越多的人开始寻求更安全、更自由的上网方式。V2Ray作为新一代代理工</p>
-                            </div>
-                        </div>
-                        <!--// end row -->
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-15">
-                            <div class="col-md-3">
-                                <a href="/news/article-178446.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240907-1/3f67644482dd40e002100b750ae5ab77.webp" class="full-width img-responsive" alt="安卓用户必备：从零开始的V2Ray科学上网完全指南">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-178446.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">安卓用户必备：从零开始的V2Ray科学上网完全指南</h3>
-                                </a>
-                                <p>引言：为什么选择V2Ray？  在数字时代，网络自由与隐私安全已成为刚需。无论是突破地域限制访问学术资源，还是保护敏感数据免受监控，一款可靠的代理工具都不可或缺。在众多解决方案中，V2Ray以其军工级</p>
-                            </div>
-                        </div>
-                        <!--// end row -->
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-14">
-                            <div class="col-md-3">
-                                <a href="/news/article-178046.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240907-1/3f67644482dd40e002100b750ae5ab77.webp" class="full-width img-responsive" alt="小火箭Shadowrocket全攻略：账号获取、配置与使用技巧详解">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-178046.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">小火箭Shadowrocket全攻略：账号获取、配置与使用技巧详解</h3>
-                                </a>
-                                <p>在全球互联网高度发达的今天，信息自由仍然是许多用户所向往的权利。而网络封锁与内容审查，则让这一目标变得充满挑战。为了能够自由访问受限网站、保护上网隐私，越来越多的用户开始借助各种科学上网工具，小火箭（</p>
-                            </div>
-                        </div>
-                        <!--// end row -->
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-13">
-                            <div class="col-md-3">
-                                <a href="/news/article-177662.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240907-1/eb541306ce3a4c7295011c925000fc45.webp" class="full-width img-responsive" alt="苹果用户必备：V2Ray完整下载与配置终极指南">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-177662.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">苹果用户必备：V2Ray完整下载与配置终极指南</h3>
-                                </a>
-                                <p>在当今互联网环境下，网络隐私和安全问题日益受到关注。尤其对于生活在网络审查严格地区的用户来说，寻找可靠的隐私保护工具至关重要。V2Ray作为一款强大的代理软件，凭借其出色的隐私保护能力和灵活的配置选项</p>
-                            </div>
-                        </div>
-                        <!--// end row -->
                         
                         <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-11/page-2.htm">2</a></li><li><a href="/date/2025-11/page-3.htm">3</a></li> <li><a href="/date/2025-11/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -271,15 +272,15 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/news/article-176092.htm" title="俄罗斯网络自由之路：全面解析科学上网的突围之道">俄罗斯网络自由之路：全面解析科学上网的突围之道</a></li>
-                        <li class="py-2"><a href="/news/article-175301.htm" title="深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南">深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-181210.htm" title="深入解析Quantumult X的分流配置文件：全面指南与实用技巧">深入解析Quantumult X的分流配置文件：全面指南与实用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-172215.htm" title="群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理">群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理</a></li>
+                        <li class="py-2"><a href="/news/article-182008.htm" title="解锁网络自由：能开V2Ray的路由器全面配置指南">解锁网络自由：能开V2Ray的路由器全面配置指南</a></li>
                         <li class="py-2"><a href="/news/article-174913.htm" title="华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南">华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-175697.htm" title="Clash拍子新手全攻略：从安装到精通的实用指南">Clash拍子新手全攻略：从安装到精通的实用指南</a></li>
                         <li class="py-2"><a href="/news/article-173727.htm" title="探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南">探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-173342.htm" title="科学上网的艺术：i站使用全攻略与深度解析">科学上网的艺术：i站使用全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-171436.htm" title="深度剖析loco科学上网：从原理到实践的完整指南">深度剖析loco科学上网：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-174125.htm" title="解锁网络自由：Quantumult X与V2Ray的完美结合指南">解锁网络自由：Quantumult X与V2Ray的完美结合指南</a></li>
-                        <li class="py-2"><a href="/news/article-171801.htm" title="词海探秘：全方位解析“clash”的语义迷宫与使用艺术">词海探秘：全方位解析“clash”的语义迷宫与使用艺术</a></li>
+                        <li class="py-2"><a href="/news/article-178835.htm" title="华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案">华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案</a></li>
+                        <li class="py-2"><a href="/news/article-182813.htm" title="Quantumult iOS 免费获取与高效使用全攻略：解锁网络自由新境界">Quantumult iOS 免费获取与高效使用全攻略：解锁网络自由新境界</a></li>
+                        <li class="py-2"><a href="/news/article-181210.htm" title="深入解析Quantumult X的分流配置文件：全面指南与实用技巧">深入解析Quantumult X的分流配置文件：全面指南与实用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-170657.htm" title="突破网络封锁：科学上网神器下载与使用全攻略">突破网络封锁：科学上网神器下载与使用全攻略</a></li>
                     </ul>
     </div>
 </div>
@@ -291,7 +292,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
@@ -314,6 +318,7 @@
                                         <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
                     <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
