--- a/date/2025-11/page-3.htm
+++ b/date/2025-11/page-3.htm
@@ -84,6 +84,7 @@
                     <div class="menu-container">
                         <ul class="nav navbar-nav navbar-nav-right">
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/">首页</a></li>
+                                                        <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/free-nodes/">免费节点</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/paid-subscribe/">推荐机场</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/news/">新闻资讯</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/client.htm">客户端</a></li>
@@ -120,6 +121,76 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-07">
+                            <div class="col-md-3">
+                                <a href="/news/article-175301.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/a42ca36d17b9649015cf987e45751c36.webp" class="full-width img-responsive" alt="深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-175301.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">深入掌握 v2rayNG：从下载安装到高级配置的完整使用指南</h3>
+                                </a>
+                                <p>在全球网络环境愈发复杂的背景下，科学上网工具已成为数百万用户获取信息自由、保护网络隐私的首选。而在众多工具中，v2rayNG 凭借其开源、灵活、高度可配置的特性，成为 Android 平台上最受欢迎的</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-06">
+                            <div class="col-md-3">
+                                <a href="/news/article-174913.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/1ebbc9d09263fcd395b36155a96c2fb5.webp" class="full-width img-responsive" alt="华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-174913.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南</h3>
+                                </a>
+                                <p>开篇：当路由器遇上科学上网  在这个信息爆炸却壁垒森严的数字时代，一台普通的路由器可以成为打开世界大门的钥匙。华硕RT-AC66U作为中高端家用路由器的经典之作，其隐藏的科学上网潜力足以让用户突破地理</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-05">
+                            <div class="col-md-3">
+                                <a href="/news/article-174520.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/eb541306ce3a4c7295011c925000fc45.webp" class="full-width img-responsive" alt="深入解析 Clash200l：从入门到精通的完整指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-174520.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">深入解析 Clash200l：从入门到精通的完整指南</h3>
+                                </a>
+                                <p>引言：网络代理工具的新选择  在当今互联网环境中，隐私保护和网络自由访问的需求日益增长，Clash200l作为一款新兴的高性能网络代理工具，正迅速获得技术爱好者和普通用户的青睐。本文将带您全面了解这款</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-04">
+                            <div class="col-md-3">
+                                <a href="/news/article-174125.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/3f67644482dd40e002100b750ae5ab77.webp" class="full-width img-responsive" alt="解锁网络自由：Quantumult X与V2Ray的完美结合指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-174125.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">解锁网络自由：Quantumult X与V2Ray的完美结合指南</h3>
+                                </a>
+                                <p>在这个数字化时代，网络自由已成为许多人的基本需求。无论是为了获取全球资讯、学术研究还是简单的娱乐消遣，突破地理限制的网络访问能力都显得尤为重要。本文将为您详细介绍如何利用Quantumult X这一强</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-03">
+                            <div class="col-md-3">
+                                <a href="/news/article-173727.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240907-1/eb541306ce3a4c7295011c925000fc45.webp" class="full-width img-responsive" alt="探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-173727.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南</h3>
+                                </a>
+                                <p>在当今数字时代，网络自由已成为许多用户的基本需求。然而，地域限制和网络审查常常阻碍了我们对全球信息的访问。梅林系统（Merlin）作为一款基于华硕路由器的第三方固件，以其强大的灵活性和丰富的功能，为用</p>
+                            </div>
+                        </div>
+                        <!--// end row -->
                                                 <div class="row item xcblog-blog-item" data-date="2025-11-02">
                             <div class="col-md-3">
                                 <a href="/news/article-173342.htm" class="xcblog-blog-url">
@@ -158,16 +229,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-171436.htm" title="深度剖析loco科学上网：从原理到实践的完整指南">深度剖析loco科学上网：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-179233.htm" title="突破网络限制：全面指南教你如何安全购买V2Ray节点并获取订阅">突破网络限制：全面指南教你如何安全购买V2Ray节点并获取订阅</a></li>
-                        <li class="py-2"><a href="/news/article-176092.htm" title="俄罗斯网络自由之路：全面解析科学上网的突围之道">俄罗斯网络自由之路：全面解析科学上网的突围之道</a></li>
-                        <li class="py-2"><a href="/news/article-169515.htm" title="探秘Shadowrocket：网络代理协议的原理、配置与实战指南">探秘Shadowrocket：网络代理协议的原理、配置与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-178835.htm" title="华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案">华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案</a></li>
-                        <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-172215.htm" title="群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理">群晖NAS终极指南：手把手教你用Docker部署Clash实现智能网络代理</a></li>
                         <li class="py-2"><a href="/news/article-178446.htm" title="安卓用户必备：从零开始的V2Ray科学上网完全指南">安卓用户必备：从零开始的V2Ray科学上网完全指南</a></li>
-                        <li class="py-2"><a href="/news/article-171053.htm" title="苹果手机Clash全面排障指南：从配置到稳定的科学上网之路">苹果手机Clash全面排障指南：从配置到稳定的科学上网之路</a></li>
-                        <li class="py-2"><a href="/news/article-180017.htm" title="突破网络枷锁：v2rayng最新版全面指南与深度体验">突破网络枷锁：v2rayng最新版全面指南与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-174913.htm" title="华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南">华硕RT-AC66U路由器科学上网全攻略：解锁网络自由的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-176877.htm" title="全面使用指南：科学上网 APK 2018 5，让信息自由触手可及">全面使用指南：科学上网 APK 2018 5，让信息自由触手可及</a></li>
+                        <li class="py-2"><a href="/news/article-171436.htm" title="深度剖析loco科学上网：从原理到实践的完整指南">深度剖析loco科学上网：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-177662.htm" title="苹果用户必备：V2Ray完整下载与配置终极指南">苹果用户必备：V2Ray完整下载与配置终极指南</a></li>
                         <li class="py-2"><a href="/news/article-174125.htm" title="解锁网络自由：Quantumult X与V2Ray的完美结合指南">解锁网络自由：Quantumult X与V2Ray的完美结合指南</a></li>
+                        <li class="py-2"><a href="/news/article-182008.htm" title="解锁网络自由：能开V2Ray的路由器全面配置指南">解锁网络自由：能开V2Ray的路由器全面配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-180017.htm" title="突破网络枷锁：v2rayng最新版全面指南与深度体验">突破网络枷锁：v2rayng最新版全面指南与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-171801.htm" title="词海探秘：全方位解析“clash”的语义迷宫与使用艺术">词海探秘：全方位解析“clash”的语义迷宫与使用艺术</a></li>
                     </ul>
     </div>
 </div>
@@ -179,7 +250,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
@@ -202,6 +276,7 @@
                                         <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
                     <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
