--- a/privacy.htm
+++ b/privacy.htm
@@ -84,6 +84,7 @@
                     <div class="menu-container">
                         <ul class="nav navbar-nav navbar-nav-right">
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/">首页</a></li>
+                                                        <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/free-nodes/">免费节点</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/paid-subscribe/">推荐机场</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/news/">新闻资讯</a></li>
                                                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href="/client.htm">客户端</a></li>
@@ -172,16 +173,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-171801.htm" title="词海探秘：全方位解析“clash”的语义迷宫与使用艺术">词海探秘：全方位解析“clash”的语义迷宫与使用艺术</a></li>
-                        <li class="py-2"><a href="/news/article-180816.htm" title="龙马科学上网完全指南：从入门到精通的详细教程与实战技巧">龙马科学上网完全指南：从入门到精通的详细教程与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-171053.htm" title="苹果手机Clash全面排障指南：从配置到稳定的科学上网之路">苹果手机Clash全面排障指南：从配置到稳定的科学上网之路</a></li>
                         <li class="py-2"><a href="/news/article-181210.htm" title="深入解析Quantumult X的分流配置文件：全面指南与实用技巧">深入解析Quantumult X的分流配置文件：全面指南与实用技巧</a></li>
-                        <li class="py-2"><a href="/news/article-175697.htm" title="Clash拍子新手全攻略：从安装到精通的实用指南">Clash拍子新手全攻略：从安装到精通的实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-176092.htm" title="俄罗斯网络自由之路：全面解析科学上网的突围之道">俄罗斯网络自由之路：全面解析科学上网的突围之道</a></li>
-                        <li class="py-2"><a href="/news/article-177270.htm" title="解锁网络边界：国区Shadowrocket的深度解析与实战指南">解锁网络边界：国区Shadowrocket的深度解析与实战指南</a></li>
                         <li class="py-2"><a href="/news/article-173727.htm" title="探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南">探索梅林科学上网与阿里云端口：解锁网络自由的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-171436.htm" title="深度剖析loco科学上网：从原理到实践的完整指南">深度剖析loco科学上网：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-178835.htm" title="华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案">华硕路由器完美部署V2Ray全攻略：从入门到精通的安全上网方案</a></li>
-                        <li class="py-2"><a href="/news/article-178446.htm" title="安卓用户必备：从零开始的V2Ray科学上网完全指南">安卓用户必备：从零开始的V2Ray科学上网完全指南</a></li>
+                        <li class="py-2"><a href="/news/article-169884.htm" title="深度剖析vmess私人节点：从原理到实践的全方位指南">深度剖析vmess私人节点：从原理到实践的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-180816.htm" title="龙马科学上网完全指南：从入门到精通的详细教程与实战技巧">龙马科学上网完全指南：从入门到精通的详细教程与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-172976.htm" title="SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？">SSR 与 V2Ray 全面对比解析：选哪一个翻墙工具更适合你？</a></li>
+                        <li class="py-2"><a href="/news/article-182008.htm" title="解锁网络自由：能开V2Ray的路由器全面配置指南">解锁网络自由：能开V2Ray的路由器全面配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-172582.htm" title="深度剖析Clash系列游戏：从硬件配置到极致优化的完整指南">深度剖析Clash系列游戏：从硬件配置到极致优化的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-176485.htm" title="突破数字铁幕：全球网络审查环境下的科学上网终极指南">突破数字铁幕：全球网络审查环境下的科学上网终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-174520.htm" title="深入解析 Clash200l：从入门到精通的完整指南">深入解析 Clash200l：从入门到精通的完整指南</a></li>
                     </ul>
     </div>
 </div>
@@ -193,7 +194,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
@@ -216,6 +220,7 @@
                                         <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
                     <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
